<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eriklindemann.shirereckoning.CustomDateActivity"
    tools:showIn="@layout/activity_custom_date">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/date_view_day"
            android:layout_centerInParent="true"
            android:id="@+id/linearLayoutCompat">


            <EditText
                android:id="@+id/day_view_gregorian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/default_day_gregorian"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/colorDateText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/month_view_gregorian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/default_month_gregorian"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/colorDateText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/year_view_gregorian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/default_year_gregorian"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/colorDateText"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/toggleBeforeCommonEra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/linearLayoutCompat"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/linearLayoutCompat"
                android:checked="false"
                android:showText="true"
                android:splitTrack="false"
                android:textColor="@color/colorDateText"
                android:textOff="AD"
                android:textOn="BCE"
                android:textSize="20sp"
                tools:checked="false" />
        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/date_view_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/date_view_date"
            android:text="@string/default_day"
            android:textAlignment="center"
            android:textColor="@color/colorDateText"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/date_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/default_date"
            android:textAlignment="center"
            android:textColor="@color/colorDateText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_view_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_view_date"
            android:text="@string/default_year"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDateText"
            android:textSize="24sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
